// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Part: Card renders correctly with all props 1`] = `
<article
  className="p-card    "
  columns={
    Array [
      "1fr 1fr",
      "1fr 1fr",
      "1fr 1fr",
      "1fr 1fr",
    ]
  }
  gutters={
    Array [
      "var(--gutter-medium)",
      "var(--gutter-medium)",
      "var(--gutter-medium)",
      "var(--gutter-medium)",
    ]
  }
>
  <div
    className="p-card__body u-arrow u-arrow--top-left"
  >
    <h3>
      This is maybe a very long title and isn't that just great?
    </h3>
    <p>
      In et sollicitudin dolor. Integer ut eleifend libero. Integer nec tellus a turpis porta posuere a non justo. Curabitur consequat sit amet augue ut aliquam. Quisque eu lobortis nibh, vitae fringilla dolor.
    </p>
  </div>
</article>
`;

exports[`Part: Card renders correctly without any props 1`] = `
<article
  className="p-card    "
>
  <div
    className="p-card__body u-arrow u-arrow--top-left"
  />
</article>
`;
